--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -337,6 +337,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def scoring_report(y_true, y_pred, estimator_type=\"\"):\n",
+    "    \"\"\"\n",
+    "        Helper function to output scores for binary classification prediction.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        y_true : {numpy.1darray}\n",
+    "            true data points; usually corresponds to test set\n",
+    "        \n",
+    "        y_pred : {numpy.1darray}\n",
+    "            estimator outcome\n",
+    "        \n",
+    "        estimator_type : {string}\n",
+    "            type of estimator (used for string formatting)\n",
+    "    \"\"\"\n",
+    "    print \"%s Accuracy Score: %s\" % (estimator_type, accuracy_score(y_true=y_true, y_pred=y_pred) * 100)\n",
+    "    print \"%s Hit Score: %s\" % (estimator_type, hit_score(y_true=y_true, y_pred=y_pred, hit_class=1))\n",
+    "    print \"%s Classification Report:\" % estimator_type\n",
+    "    print classification_report(y_true=y_true, y_pred=y_pred, digits=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": true
@@ -1375,6 +1404,370 @@
    "source": [
     "len(gb_sfm_features)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "features_iter_1 = list(set(xt_sfm_features + rf_sfm_features + gb_sfm_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "286"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(features_iter_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# output merged features to csv\n",
+    "pd.DataFrame(features_iter_1, columns=[\"features\"]).to_csv(\"ensemble_sfm_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# merged feature importance dataframes and output to csv\n",
+    "merged_feat_imp = xt_feat_imp.merge(rf_feat_imp, on=\"feature\", copy=False, suffixes=(\"_xt\", \"_rf\"), how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merged_feat_imp = merged_feat_imp.merge(gb_feat_imp, on=\"feature\", copy=False, how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merged_feat_imp.columns = [\"feature\", \"importance_xt\", \"importance_rf\", \"importance_gb\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merged_feat_imp.to_csv(\"ensemble_merged_feat_rank.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# end feature importance analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# use subset of features with ensemble methods and linear svc to test overall performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gb_clf = GradientBoostingClassifier(n_estimators=100, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_new = df_numeric_mean[features_iter_1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_new_train = X_new[:int(0.7*len(X_new))]\n",
+    "X_new_test = X_new[int(0.7*len(X_new)):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Iter       Train Loss   Remaining Time \n",
+      "         1           0.0697           14.89m\n",
+      "         2           0.0671           15.10m\n",
+      "         3           0.0664           14.96m\n",
+      "         4           0.0661           14.81m\n",
+      "         5           0.0659           14.65m\n",
+      "         6           0.0658           14.49m\n",
+      "         7           0.0657           14.24m\n",
+      "         8           0.0652           13.93m\n",
+      "         9           0.0651           13.73m\n",
+      "        10           0.0650           13.56m\n",
+      "        11           0.0649           13.45m\n",
+      "        12           0.0648           13.28m\n",
+      "        13           0.0647           13.10m\n",
+      "        14           0.0647           12.96m\n",
+      "        15           0.0646           12.90m\n",
+      "        16           0.0645           12.72m\n",
+      "        17           0.0645           12.55m\n",
+      "        18           0.0643           12.49m\n",
+      "        19           0.0643           12.30m\n",
+      "        20           0.0642           12.30m\n",
+      "        21           0.0641           12.19m\n",
+      "        22           0.0641           11.98m\n",
+      "        23           0.0641           11.78m\n",
+      "        24           0.0640           11.61m\n",
+      "        25           0.0640           11.42m\n",
+      "        26           0.0640           11.26m\n",
+      "        27           0.0639           11.11m\n",
+      "        28           0.0639           10.98m\n",
+      "        29           0.0644           10.78m\n",
+      "        30 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           10.59m\n",
+      "        31 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           10.41m\n",
+      "        32 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           10.22m\n",
+      "        33 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           10.04m\n",
+      "        34 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            9.86m\n",
+      "        35 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            9.70m\n",
+      "        36 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            9.52m\n",
+      "        37 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            9.35m\n",
+      "        38 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            9.19m\n",
+      "        39 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            9.03m\n",
+      "        40 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.87m\n",
+      "        41 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.70m\n",
+      "        42 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.53m\n",
+      "        43 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.37m\n",
+      "        44 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.21m\n",
+      "        45 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.04m\n",
+      "        46 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            7.89m\n",
+      "        47 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            7.73m\n",
+      "        48 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            7.58m\n",
+      "        49 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            7.42m\n",
+      "        50 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            7.27m\n",
+      "        51 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            7.13m\n",
+      "        52 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.97m\n",
+      "        53 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.82m\n",
+      "        54 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.67m\n",
+      "        55 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.51m\n",
+      "        56 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.36m\n",
+      "        57 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.21m\n",
+      "        58 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            6.07m\n",
+      "        59 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.92m\n",
+      "        60 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.76m\n",
+      "        61 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.62m\n",
+      "        62 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.48m\n",
+      "        63 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.35m\n",
+      "        64 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.21m\n",
+      "        65 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            5.07m\n",
+      "        66 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.93m\n",
+      "        67 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.78m\n",
+      "        68 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.64m\n",
+      "        69 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.50m\n",
+      "        70 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.35m\n",
+      "        71 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.22m\n",
+      "        72 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            4.07m\n",
+      "        73 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.93m\n",
+      "        74 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.79m\n",
+      "        75 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.65m\n",
+      "        76 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.50m\n",
+      "        77 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.36m\n",
+      "        78 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.21m\n",
+      "        79 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            3.06m\n",
+      "        80 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.92m\n",
+      "        81 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.78m\n",
+      "        82 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.63m\n",
+      "        83 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.48m\n",
+      "        84 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.34m\n",
+      "        85 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.19m\n",
+      "        86 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            2.04m\n",
+      "        87 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.89m\n",
+      "        88 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.75m\n",
+      "        89 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.60m\n",
+      "        90 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.46m\n",
+      "        91 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.31m\n",
+      "        92 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.16m\n",
+      "        93 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            1.02m\n",
+      "        94 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           52.46s\n",
+      "        95 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           43.67s\n",
+      "        96 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           34.98s\n",
+      "        97 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           26.20s\n",
+      "        98 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000           17.45s\n",
+      "        99 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            8.72s\n",
+      "       100 3081188406912573590117522167658384541079857483336963927133610906129856029817098520282247137005720829952.0000            0.00s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier(init=None, learning_rate=0.1, loss='deviance',\n",
+       "              max_depth=3, max_features=None, max_leaf_nodes=None,\n",
+       "              min_samples_leaf=1, min_samples_split=2,\n",
+       "              min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "              presort='auto', random_state=None, subsample=1.0, verbose=2,\n",
+       "              warm_start=False)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gb_clf.fit(X_new_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prediction = gb_clf.predict(X_new_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Boost Accuracy Score: 99.4269623372\n",
+      "Gradient Boost Hit Score: 4.71789883268\n",
+      "Gradient Boost Classification Report:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0      0.994     1.000     0.997    353069\n",
+      "          1      0.561     0.047     0.087      2056\n",
+      "\n",
+      "avg / total      0.992     0.994     0.992    355125\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_report(y_test, prediction, estimator_type=\"Gradient Boost\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
